Improved reading clarity of ExpenseTracker, deleted compiled folders